# SportsPredictor

./: .gitignore  API_SELF_HEALING_GUIDE.md  CHANGELOG.md  CLAUDE.md  CLOUD_DEPLOYMENT.md  FRIDAY_ML_AGENDA.md  LAUNCH_ROADMAP_30_DAYS.md  MASTER_TODO.md  MLB_V2_MASTER_PLAN.md  MLB_V2_PLAN.md  ML_TRAINING_READINESS_AUDIT_2025-12-28.md  PROJECT_STATUS.md  Play-by-play-machine-betting-idea.md  QUICKSTART.md  README.md  REORGANIZATION_COMPLETE.md  SELF_HEALING_SUMMARY.md  SIMPLIFY_PLAN.md  Session Log — 2026-04-13.md  TODO_TOMORROW.md  daily_audit.py  discord_bot.py  mission_control.bat  mission_control.py  mission_control_backup.py  mlAccuracyTableVsNaiveBaseline.md  orchestrator.py  project_config.py  pytest.ini  requirements.txt  run_game_lines.bat  start_dashboard.bat  start_dashboard.bat.template  start_orchestrator.bat  start_orchestrator.bat.template  start_parlay_ui.bat  supabase_tables.sql  test_api_monitor.py
PEGASUS/: PEGASUS.md  (+5 more)
tui-terminal/: .env.example  BLUEPRINT.md  Cargo.toml  PreWork_Bookmark10.txt  TUI Startup error.txt  _run_context.sh  _run_ingester.sh  _run_tui.sh  bookmark-10.md  bookmark-11.md  bookmark-12.md  grab_ud_token.py  kill.sh  launch.sh  prompt_saturday_phase 3_bkmk 5.txt
tui-terminal/Bookmark Archive - Building Decisions - UI/: PreWork_Bookmark9.md  PreWork_Bookmark9.txt  PreWork_Bookmark9_pt2.md  bookmark-1.md  bookmark-2.md  bookmark-3.md  bookmark-4.md  bookmark-5.md  bookmark-6.md  bookmark-7.md  bookmark-8.md  bookmark-9.md  kill-restart-process.txt  output_log.txt  tui-phase3-postreboot.txt
tui-terminal/intel/: context_engine.py
(+555 files in other folders)
